cluster/apps/security/authelia/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    allow: db
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    helm.sh/chart: app-template-1.5.1
    helm.toolkit.fluxcd.io/name: authelia
    helm.toolkit.fluxcd.io/namespace: security
  name: authelia
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - --config
        - /config/configuration.yml
        image: ghcr.io/authelia/authelia:4.39.27
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        name: authelia
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /config/configuration.yml
          name: config
          readOnly: true
          subPath: configuration.yml
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 568
        runAsUser: 568
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/name: authelia
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
      volumes:
      - configMap:
          name: authelia
        name: config
