cluster/apps/security/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/service: authelia
    helm.sh/chart: app-template-1.5.1
    helm.toolkit.fluxcd.io/name: authelia
    helm.toolkit.fluxcd.io/namespace: security
  name: authelia
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  type: ClusterIP
